--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^5.0.1",
     "mysql2": "^2.3.2",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
+    "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
